syntax = "proto3";

package v1;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "resource_file.proto";
import "resource_directory.proto";
import "google/protobuf/empty.proto";

service Service {
  rpc GetDirectory (GetDirectoryRequest) returns (GetDirectoryReply) {
    option (google.api.http) = {
      get: "/resource/v1/directory",
      response_body:"list"
    };
  }

  rpc AddDirectory (AddDirectoryRequest) returns (Directory) {
    option (google.api.http) = {
      post: "/resource/v1/directory",
      body:"*",
    };
  }

  rpc UpdateDirectory (UpdateDirectoryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/resource/v1/directory",
      body:"*",
    };
  }

  rpc DeleteDirectory (DeleteDirectoryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/resource/v1/directory",
    };
  }

  rpc PrepareUploadFile (PrepareUploadFileRequest) returns (PrepareUploadFileReply) {
    option (google.api.http) = {
      post: "/resource/v1/upload/prepare",
      body:"*",
      additional_bindings:{
        post: "/resource/client/v1/upload/prepare",
        body:"*",
      }
    };
  }

  rpc UploadFile (UploadFileRequest) returns (UploadFileReply) {
    option (google.api.http) = {
      post: "/resource/v1/upload",
      body:"*",
      additional_bindings:{
        post: "/resource/client/v1/upload",
        body:"*",
      }
    };
  }

  rpc PageFile (PageFileRequest) returns (PageFileReply) {
    option (google.api.http) = {
      get: "/resource/v1/files"
    };
  }

  rpc GetFileBySha (GetFileByShaRequest) returns (File) {
    option (google.api.http) = {
      get: "/resource/v1/file/sha",
      additional_bindings:{
        get: "/resource/client/v1/file/sha",
      }
    };
  }

  rpc UpdateFile (UpdateFileRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/resource/v1/file",
      body:"*"
    };
  }

  rpc DeleteFile (DeleteFileRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/resource/v1/file",
      body:"*"
    };
  }
}


